# lancelot

./: Cargo.toml  Makefile  README.md
src/: main.rs  output.rs
test/: generate.py
test/fixtures/files/: simple.lance  wide.lance
test/fixtures/tables/nested/_transactions/: 0-81554a28-57c8-4f6f-bb34-c01afe675326.txn
test/fixtures/tables/simple/_indices/e2699d55-5b38-457d-8cc2-0c74bb2d1331/: page_data.lance  page_lookup.lance
test/fixtures/tables/simple/_transactions/: 0-8cc98edb-a57f-4300-83b9-14be9b13dba6.txn  1-19b43ed9-dc60-4355-b677-ebacac22ab76.txn  2-b0acc570-4e1a-4f69-b086-c74edfc66b68.txn  3-858edd58-1484-45f3-933d-67122d98dc2f.txn
test/fixtures/tables/vectors/_indices/c6e0b1bb-c157-4ae2-9689-472418b34835/: auxiliary.idx  index.idx
test/fixtures/tables/vectors/_transactions/: 0-571b3aea-dd9f-46e6-8105-109b4492fffa.txn  1-720517fb-8034-4456-a552-db8d4ccb2ee1.txn
test/fixtures/tables/with_deletions/_deletions/: 0-1-7367122762067017520.arrow
test/fixtures/tables/with_deletions/_transactions/: 0-001385dc-1807-418e-8156-6cba075ba2cd.txn  1-e14d7696-e1f0-4f5c-8973-bffd4b5829c8.txn
